--- a/.gitignore
+++ b/.gitignore
@@ -4,16 +4,18 @@
 /out-tsc
 
 # dependencies
-/node_modules
+node_modules
 
 # IDEs and editors
-/.idea
+.idea
 .project
 .classpath
 .c9/
 *.launch
 .settings/
 *.sublime-workspace
+target
+*.iml
 
 # IDE - VSCode
 .vscode/*
