--- a/kov-api/src/main/resources/application.properties
+++ b/kov-api/src/main/resources/application.properties
@@ -7,3 +7,6 @@ spring.datasource.username=root
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.properties.hibernate.format_sql=TRUE
 spring.jpa.hibernate.ddl-auto=update
+
+#Server Properties
+server.port=8000
