--- a/kov-api/pom.xml
+++ b/kov-api/pom.xml
@@ -76,6 +76,11 @@
             <artifactId>gson</artifactId>
             <version>2.8.2</version>
         </dependency>
+        <dependency>
+            <groupId>com.cloudinary</groupId>
+            <artifactId>cloudinary-http44</artifactId>
+            <version>1.18.0</version>
+        </dependency>
     </dependencies>
 
     <build>
