--- a/kov-api/pom.xml
+++ b/kov-api/pom.xml
@@ -81,6 +81,18 @@
             <artifactId>cloudinary-http44</artifactId>
             <version>1.18.0</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.hsqldb</groupId>
+            <artifactId>hsqldb</artifactId>
+            <scope>test</scope>
+        </dependency>
+
     </dependencies>
 
     <build>
